--- a/index.html
+++ b/index.html
@@ -116,6 +116,90 @@
           </li>
         </ul>
       </section>
+
+      <!--! SUBSCRIBE -->
+
+      <section class="subscribe">
+        <p class="subscribe-email-text">
+          Subscribe to get emails about our new products and sales
+        </p>
+
+        <form action="" class="subscribe-form"></form>
+
+        <p class="subscribe-text">
+          We have a passion for coffee and people. Make sure you always have
+          your favorite cup of coffee around to start your day off right.
+        </p>
+
+        <a class="subscribe-logo"><svg class="subscribe-logo-img"></svg></a>
+      </section>
     </main>
+
+    <!-- FOOTER -->
+
+    <footer class="footer">
+      <a href="" class="footer-logo"></a>
+
+      <p class="footer-about-text">Coffee shop</p>
+
+      <ul class="footer-menu-buy">
+        <li class="footer-buy-item">
+          <p class="footer-buy-text">Catalogue</p>
+        </li>
+
+        <li class="footer-buy-item">
+          <p class="footer-buy-text">Gift cards</p>
+        </li>
+
+        <li class="footer-buy-item">
+          <p class="footer-buy-text">Delivery</p>
+        </li>
+      </ul>
+
+      <ul class="footer-menu-about">
+        <li class="footer-about-item">
+          <p class="footer-about-text"></p>
+        </li>
+
+        <li class="footer-about-item">
+          <p class="footer-about-text"></p>
+        </li>
+
+        <li class="footer-about-item">
+          <p class="footer-about-text"></p>
+        </li>
+
+        <li class="footer-about-item">
+          <p class="footer-about-text"></p>
+        </li>
+
+        <li class="footer-about-item">
+          <p class="footer-about-text"></p>
+        </li>
+      </ul>
+
+      <p class="footer-follow"></p>
+      <ul class="footer-social">
+        <li class="footer-social-item">
+          <a href="" class="footer-social-link">
+            <svg class="footer-social-icon"></svg>
+          </a>
+        </li>
+
+        <li class="footer-social-item">
+          <a href="" class="footer-social-link">
+            <svg class="footer-social-icon"></svg>
+          </a>
+        </li>
+
+        <li class="footer-social-item">
+          <a href="" class="footer-social-link">
+            <svg class="footer-social-icon"></svg>
+          </a>
+        </li>
+      </ul>
+
+      <p class="footer-copyright"></p>
+    </footer>
   </body>
 </html>
