--- a/index.html
+++ b/index.html
@@ -81,17 +81,22 @@
             alt="Three packs of coffee"
           />
 
-          <p class="hero-text-new">What’s new?</p>
+          <div class="hero-wrapper">
+  
+            <p class="hero-text-new">What’s new?</p>
+  
+            <h1 class="hero-title">Meet our new coffee!</h1>
+  
+            <p class="hero-text">
+              Try one of our signature selections and see what everyone’s talking
+              about or select ‘Catalogue’ at the top of the page to view all the
+              possibilities.
+            </p>
+  
+            <a href="" class="hero-more-link">Learn more <span></span>></a>
+            </svg></a>
 
-          <h1 class="hero-title">Meet our new coffee!</h1>
-
-          <p class="hero-text">
-            Try one of our signature selections and see what everyone’s talking
-            about or select ‘Catalogue’ at the top of the page to view all the
-            possibilities.
-          </p>
-
-          <a href="" class="hero-more-link">Learn more</a>
+          </div>    
         </div>
       </section>
 
