--- a/index.html
+++ b/index.html
@@ -282,9 +282,11 @@
 
     <footer class="footer">
       <div class="footer-container container">
-        <a href="" class="footer-logo"></a>
+        <div class="footer-">
+          <a href="" class="footer-logo"></a>
 
-        <p class="footer-about-text">Coffee shop</p>
+          <p class="footer-about-text">Coffee shop</p>
+        </div>
 
         <ul class="footer-menu-buy">
           <li class="footer-buy-item">
