--- a/index.html
+++ b/index.html
@@ -282,69 +282,85 @@
 
     <footer class="footer">
       <div class="footer-container container">
-        <div class="footer-">
-          <a href="" class="footer-logo"></a>
+        <div class="footer-wrapper">
+          <div class="footer-wrapper-left">
+            <a href="./index.html" class="footer-logo">
+              <svg class="footer-logo-icon" width="174" height="30">
+                <use href="./images/icons.svg#icon-logo"></use>
+              </svg>
+            </a>
 
-          <p class="footer-about-text">Coffee shop</p>
+            <p class="footer-about-text">Coffee shop</p>
+          </div>
+
+          <div class="footer-wrapper-right">
+            <ul class="footer-menu-buy">
+              <li class="footer-buy-item">
+                <a class="footer-buy-link">Catalogue</a>
+              </li>
+
+              <li class="footer-buy-item">
+                <a class="footer-buy-link">Gift cards</a>
+              </li>
+
+              <li class="footer-buy-item">
+                <a class="footer-buy-link">Delivery</a>
+              </li>
+            </ul>
+
+            <ul class="footer-menu-about">
+              <li class="footer-about-item">
+                <a class="footer-about-link">About company</a>
+              </li>
+
+              <li class="footer-about-item">
+                <a class="footer-about-link">Job opportunities</a>
+              </li>
+
+              <li class="footer-about-item">
+                <a class="footer-about-link">Privacy Policy</a>
+              </li>
+
+              <li class="footer-about-item">
+                <a class="footer-about-link">Terms of Use</a>
+              </li>
+
+              <li class="footer-about-item">
+                <a class="footer-about-link">Contact Us</a>
+              </li>
+            </ul>
+
+            <div class="footer-social-wrapper">
+              <p class="footer-follow-text">Follow us</p>
+
+              <ul class="footer-social">
+                <li class="footer-social-item">
+                  <a href="" class="footer-social-link">
+                    <svg class="footer-social-facebook" width="25" height="25">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="footer-social-item">
+                  <a href="" class="footer-social-link">
+                    <svg class="footer-social-instagram" width="25" height="25">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="footer-social-item">
+                  <a href="" class="footer-social-link">
+                    <svg class="footer-social-twitter" width="25" height="25">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
-
-        <ul class="footer-menu-buy">
-          <li class="footer-buy-item">
-            <a class="footer-buy-link">Catalogue</a>
-          </li>
-
-          <li class="footer-buy-item">
-            <a class="footer-buy-link">Gift cards</a>
-          </li>
-
-          <li class="footer-buy-item">
-            <a class="footer-buy-link">Delivery</a>
-          </li>
-        </ul>
-
-        <ul class="footer-menu-about">
-          <li class="footer-about-item">
-            <a class="footer-about-link">About company</a>
-          </li>
-
-          <li class="footer-about-item">
-            <a class="footer-about-link">Job opportunities</a>
-          </li>
-
-          <li class="footer-about-item">
-            <a class="footer-about-link">Privacy Policy</a>
-          </li>
-
-          <li class="footer-about-item">
-            <a class="footer-about-link">Terms of Use</a>
-          </li>
-
-          <li class="footer-about-item">
-            <a class="footer-about-link">Contact Us</a>
-          </li>
-        </ul>
-
-        <p class="footer-follow-text">Follow us</p>
-        <ul class="footer-social">
-          <li class="footer-social-item">
-            <a href="" class="footer-social-link">
-              <svg class="footer-social-icon"></svg>
-            </a>
-          </li>
-
-          <li class="footer-social-item">
-            <a href="" class="footer-social-link">
-              <svg class="footer-social-icon"></svg>
-            </a>
-          </li>
-
-          <li class="footer-social-item">
-            <a href="" class="footer-social-link">
-              <svg class="footer-social-icon"></svg>
-            </a>
-          </li>
-        </ul>
-
         <p class="footer-copyright">
           &copy; 2023 CoffeeBuy. All rights reserved.
         </p>
