margins and gt added

--- a/index.html
+++ b/index.html
@@ -131,7 +131,12 @@
           <div class="sales-wrapper">
             <h3 class="sales-title">Check our sales for popular products</h3>
 
-            <a href="" class="sales-all-link">All sales</a>
+            <a href="" class="sales-all-link">
+              <span>All sales</span>
+              <svg class="sales-gt-icon" width="5" height="8">
+                <use href="./images/icons.svg#icon-gt"></use>
+              </svg>
+            </a>
           </div>
 
           <ul class="sales-list">
