--- a/index.html
+++ b/index.html
@@ -92,7 +92,12 @@
               all the possibilities.
             </p>
 
-            <a href="" class="hero-more-link">Learn more <span></span>></a>
+            <a href="" class="hero-more-link">
+              <span>Learn more</span>
+              <svg class="hero-gt-icon" width="8" height="10">
+                <use href="./images/icons.svg#icon-gt"></use>
+              </svg>
+            </a>
           </div>
         </div>
       </section>
@@ -133,7 +138,7 @@
 
             <a href="" class="sales-all-link">
               <span>All sales</span>
-              <svg class="sales-gt-icon" width="5" height="8">
+              <svg class="sales-gt-icon" width="7" height="10">
                 <use href="./images/icons.svg#icon-gt"></use>
               </svg>
             </a>
@@ -141,6 +146,10 @@
 
           <ul class="sales-list">
             <li class="sales-item">
+              <div class="sales-discount-wrapper">
+                <span class="sales-discount">-30%</span>
+              </div>
+
               <img
                 src="./images/sales-coffee-1-img.png"
                 alt="Blue-yellow pack"
@@ -175,6 +184,10 @@
             </li>
 
             <li class="sales-item">
+              <div class="sales-discount-wrapper">
+                <span class="sales-discount">-15%</span>
+              </div>
+
               <img
                 src="./images/sales-coffee-2-img.png"
                 alt="Arabica brazil blend"
@@ -209,6 +222,10 @@
             </li>
 
             <li class="sales-item">
+              <div class="sales-discount-wrapper">
+                <span class="sales-discount">-25%</span>
+              </div>
+
               <img
                 src="./images/sales-coffee-3-img.png"
                 alt="Cartoon style pack"
