--- a/index.html
+++ b/index.html
@@ -82,6 +82,57 @@
           />
 
           <div class="hero-wrapper">
+            <svg
+              class="hero-bg"
+              xmlns="http://www.w3.org/2000/svg"
+              width="104"
+              height="122"
+              viewBox="0 0 104 122"
+              fill="none"
+            >
+              <path
+                opacity="0.35"
+                d="M1 1L103 121M1.29386 69.6377L64.4976 7.24446"
+                stroke="#293458"
+                stroke-linecap="round"
+                stroke-dasharray="4 4"
+              />
+            </svg>
+
+            <svg
+              class="hero-bg"
+              xmlns="http://www.w3.org/2000/svg"
+              width="104"
+              height="122"
+              viewBox="0 0 104 122"
+              fill="none"
+            >
+              <path
+                opacity="0.35"
+                d="M1 1L103 121M1.29386 69.6377L64.4976 7.24446"
+                stroke="#293458"
+                stroke-linecap="round"
+                stroke-dasharray="4 4"
+              />
+            </svg>
+
+            <svg
+              class="hero-bg"
+              xmlns="http://www.w3.org/2000/svg"
+              width="104"
+              height="122"
+              viewBox="0 0 104 122"
+              fill="none"
+            >
+              <path
+                opacity="0.35"
+                d="M1 1L103 121M1.29386 69.6377L64.4976 7.24446"
+                stroke="#293458"
+                stroke-linecap="round"
+                stroke-dasharray="4 4"
+              />
+            </svg>
+
             <p class="hero-text-new">What’s new?</p>
 
             <h1 class="hero-title">Meet our new coffee!</h1>
@@ -107,6 +158,57 @@
       <section class="interesting">
         <div class="interesting-container container">
           <div class="interesting-wrapper">
+            <svg
+              class="interesting-bg"
+              xmlns="http://www.w3.org/2000/svg"
+              width="104"
+              height="122"
+              viewBox="0 0 104 122"
+              fill="none"
+            >
+              <path
+                opacity="0.35"
+                d="M1 1L103 121M1.29386 69.6377L64.4976 7.24446"
+                stroke="#293458"
+                stroke-linecap="round"
+                stroke-dasharray="4 4"
+              />
+            </svg>
+
+            <svg
+              class="interesting-bg"
+              xmlns="http://www.w3.org/2000/svg"
+              width="104"
+              height="122"
+              viewBox="0 0 104 122"
+              fill="none"
+            >
+              <path
+                opacity="0.35"
+                d="M1 1L103 121M1.29386 69.6377L64.4976 7.24446"
+                stroke="#293458"
+                stroke-linecap="round"
+                stroke-dasharray="4 4"
+              />
+            </svg>
+
+            <svg
+              class="interesting-bg"
+              xmlns="http://www.w3.org/2000/svg"
+              width="104"
+              height="122"
+              viewBox="0 0 104 122"
+              fill="none"
+            >
+              <path
+                opacity="0.35"
+                d="M1 1L103 121M1.29386 69.6377L64.4976 7.24446"
+                stroke="#293458"
+                stroke-linecap="round"
+                stroke-dasharray="4 4"
+              />
+            </svg>
+
             <h2 class="interesting-title">
               What’s interesting about this coffee?
             </h2>
@@ -134,6 +236,23 @@
       <section class="sales">
         <div class="sales-container container">
           <div class="sales-wrapper">
+            <svg
+              class="sales-bg"
+              xmlns="http://www.w3.org/2000/svg"
+              width="104"
+              height="122"
+              viewBox="0 0 104 122"
+              fill="none"
+            >
+              <path
+                opacity="0.35"
+                d="M1 1L103 121M1.29386 69.6377L64.4976 7.24446"
+                stroke="#293458"
+                stroke-linecap="round"
+                stroke-dasharray="4 4"
+              />
+            </svg>
+
             <h3 class="sales-title">Check our sales for popular products</h3>
 
             <a href="" class="sales-all-link">
@@ -144,121 +263,157 @@
             </a>
           </div>
 
-          <ul class="sales-list">
-            <li class="sales-item">
-              <div class="sales-discount-wrapper">
-                <span class="sales-discount">-30%</span>
-              </div>
-
-              <img
-                src="./images/sales-coffee-1-img.png"
-                alt="Blue-yellow pack"
-                class="sales-item-img"
+          <div class="sales-list-wrap">
+            <svg
+              class="sales-list-bg"
+              xmlns="http://www.w3.org/2000/svg"
+              width="104"
+              height="122"
+              viewBox="0 0 104 122"
+              fill="none"
+            >
+              <path
+                opacity="0.35"
+                d="M1 1L103 121M1.29386 69.6377L64.4976 7.24446"
+                stroke="#293458"
+                stroke-linecap="round"
+                stroke-dasharray="4 4"
               />
+            </svg>
 
-              <p class="sales-item-name">Coffee Retail Packs</p>
+            <svg
+              class="sales-list-bg"
+              xmlns="http://www.w3.org/2000/svg"
+              width="104"
+              height="122"
+              viewBox="0 0 104 122"
+              fill="none"
+            >
+              <path
+                opacity="0.35"
+                d="M1 1L103 121M1.29386 69.6377L64.4976 7.24446"
+                stroke="#293458"
+                stroke-linecap="round"
+                stroke-dasharray="4 4"
+              />
+            </svg>
 
-              <p class="sales-item-weight">500 g</p>
+            <ul class="sales-list">
+              <li class="sales-item">
+                <div class="sales-discount-wrapper">
+                  <span class="sales-discount">-30%</span>
+                </div>
 
-              <div class="sales-price-wrapper">
-                <p class="sales-promotional-price">$ 14.99</p>
-
-                <p class="sales-price">$ 10.49</p>
-              </div>
-
-              <form class="sales-form">
-                <button type="button" class="sales-plus">+</button>
-
-                <input
-                  class="sales-input"
-                  id="sales-quantity-one"
-                  type="number"
-                  name="sales-quantity"
-                  value="1"
+                <img
+                  src="./images/sales-coffee-1-img.png"
+                  alt="Blue-yellow pack"
+                  class="sales-item-img"
                 />
 
-                <button type="button" class="sales-minus">-</button>
-              </form>
+                <p class="sales-item-name">Coffee Retail Packs</p>
 
-              <button class="sales-btn-buy">Add to cart</button>
-            </li>
+                <p class="sales-item-weight">500 g</p>
 
-            <li class="sales-item">
-              <div class="sales-discount-wrapper">
-                <span class="sales-discount">-15%</span>
-              </div>
+                <div class="sales-price-wrapper">
+                  <p class="sales-promotional-price">$ 14.99</p>
 
-              <img
-                src="./images/sales-coffee-2-img.png"
-                alt="Arabica brazil blend"
-                class="sales-item-img"
-              />
+                  <p class="sales-price">$ 10.49</p>
+                </div>
 
-              <p class="sales-item-name">Brazil Blend Arabica</p>
+                <form class="sales-form">
+                  <button type="button" class="sales-plus">+</button>
 
-              <p class="sales-item-weight">500 g</p>
+                  <input
+                    class="sales-input"
+                    id="sales-quantity-one"
+                    type="number"
+                    name="sales-quantity"
+                    value="1"
+                  />
 
-              <div class="sales-price-wrapper">
-                <p class="sales-promotional-price">$ 13.99</p>
+                  <button type="button" class="sales-minus">-</button>
+                </form>
 
-                <p class="sales-price">$ 11.89</p>
-              </div>
+                <button class="sales-btn-buy">Add to cart</button>
+              </li>
 
-              <form class="sales-form">
-                <button type="button" class="sales-plus">+</button>
+              <li class="sales-item">
+                <div class="sales-discount-wrapper">
+                  <span class="sales-discount">-15%</span>
+                </div>
 
-                <input
-                  class="sales-input"
-                  id="sales-quantity-two"
-                  type="number"
-                  name="sales-quantity"
-                  value="1"
+                <img
+                  src="./images/sales-coffee-2-img.png"
+                  alt="Arabica brazil blend"
+                  class="sales-item-img"
                 />
 
-                <button type="button" class="sales-minus">-</button>
-              </form>
+                <p class="sales-item-name">Brazil Blend Arabica</p>
 
-              <button class="sales-btn-buy">Add to cart</button>
-            </li>
+                <p class="sales-item-weight">500 g</p>
 
-            <li class="sales-item">
-              <div class="sales-discount-wrapper">
-                <span class="sales-discount">-25%</span>
-              </div>
+                <div class="sales-price-wrapper">
+                  <p class="sales-promotional-price">$ 13.99</p>
 
-              <img
-                src="./images/sales-coffee-3-img.png"
-                alt="Cartoon style pack"
-                class="sales-item-img"
-              />
+                  <p class="sales-price">$ 11.89</p>
+                </div>
 
-              <p class="sales-item-name">Unicorn Blood Dark</p>
+                <form class="sales-form">
+                  <button type="button" class="sales-plus">+</button>
 
-              <p class="sales-item-weight">500 g</p>
+                  <input
+                    class="sales-input"
+                    id="sales-quantity-two"
+                    type="number"
+                    name="sales-quantity"
+                    value="1"
+                  />
 
-              <div class="sales-price-wrapper">
-                <p class="sales-promotional-price">$ 16.50</p>
+                  <button type="button" class="sales-minus">-</button>
+                </form>
 
-                <p class="sales-price">$ 12.38</p>
-              </div>
+                <button class="sales-btn-buy">Add to cart</button>
+              </li>
 
-              <form class="sales-form">
-                <button type="button" class="sales-plus">+</button>
+              <li class="sales-item">
+                <div class="sales-discount-wrapper">
+                  <span class="sales-discount">-25%</span>
+                </div>
 
-                <input
-                  class="sales-input"
-                  id="sales-quantity-three"
-                  type="number"
-                  name="sales-quantity"
-                  value="1"
+                <img
+                  src="./images/sales-coffee-3-img.png"
+                  alt="Cartoon style pack"
+                  class="sales-item-img"
                 />
 
-                <button type="button" class="sales-minus">-</button>
-              </form>
+                <p class="sales-item-name">Unicorn Blood Dark</p>
 
-              <button class="sales-btn-buy">Add to cart</button>
-            </li>
-          </ul>
+                <p class="sales-item-weight">500 g</p>
+
+                <div class="sales-price-wrapper">
+                  <p class="sales-promotional-price">$ 16.50</p>
+
+                  <p class="sales-price">$ 12.38</p>
+                </div>
+
+                <form class="sales-form">
+                  <button type="button" class="sales-plus">+</button>
+
+                  <input
+                    class="sales-input"
+                    id="sales-quantity-three"
+                    type="number"
+                    name="sales-quantity"
+                    value="1"
+                  />
+
+                  <button type="button" class="sales-minus">-</button>
+                </form>
+
+                <button class="sales-btn-buy">Add to cart</button>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
 
